# ML_ALGO_IN_RUST

./: Cargo.toml  README.md  data.csv
docs/: 01_Abstract.md  02_Introduction.md  03_Literature_Review.md  04_Methods.md  05_Datasets.md  06_System_Architecture.md  07_Implementation.md  08_Experiments.md  09_Results.md  10_Discussion.md  11_Conclusion.md  12_References.md
models/: linear_model.joblib  linear_model_rust.json  logistic_weights.csv
results/: KMeans_Result.xlsx  KNN_results.xlsx  Linear_regression_Result.csv.xlsx  Logsitic_regression_Result.xlsx  PCA_Comparision.xlsx  pca_components.csv  pca_explained.csv  pca_results.xlsx  rust_pca_components.csv  rust_pca_explained.csv  rust_pca_reduced.csv  ~$KMeans_Result.xlsx
src/: KNN.rs  Kmeans.rs  PCA.rs  data.rs  encoding.rs  lib.rs  linear.rs  load_data.rs  logistic.rs  main.rs  metrics.rs  model.rs  model_io.rs  preprocess.rs  split.rs  test_split.rs
test/: KMeans.py  KMeans.rs  KNN.py  KNN.rs  PCA.py  PCA.rs  data_pca_reduced.csv  linear_regression.py  linear_regression.rs  load_dataset.rs  load_xy_dataset.rs  logistic_regression.rs  logstic_regression.py
test/models/: linear_model.joblib  logistic_pipeline.joblib
