[package]
name = "ML_ALGO_Rewite"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
ndarray-rand = "0.14"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
nalgebra = "0.32"
calamine = "0.24"  # Excel file support

[[bin]]
name = "linear_regression"
path = "test/linear_regression.rs"
[[bin]]
name="logsitic_regression"
path="test/logistic_regression.rs"
