[package]
name = "ML_ALGO_Rewite"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.16"  # Change from 0.15 to 0.16
ndarray-rand = "0.15"  # Also update this
csv = "1.3"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
nalgebra = "0.33"
calamine = "0.24"


[[bin]]
name = "linear_regression"
path = "test/linear_regression.rs"
[[bin]]
name="logsitic_regression"
path="test/logistic_regression.rs"
[[bin]]
name="Kmeans"
path="test/Kmeans.rs"
[[bin]]
name="load_data"
path="test/load_dataset.rs"
[[bin]]
name="load_data_1"
path="test/load_xy_dataset.rs"
